deployment/kubernetes/core-explorer-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-explorer-api
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - api.totem.gdn
      secretName: api.totem.gdn-tls
  rules:
    - host: api.totem.gdn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-explorer-api
                port:
                  number: 443
